--- a/API/requirements.txt
+++ b/API/requirements.txt
@@ -1,367 +1,7 @@
-absl-py==1.0.0
-alabaster @ file:///home/ktietz/src/ci/alabaster_1611921544520/work
-alembic==1.8.0
-anaconda-client==1.10.0
-anaconda-navigator==2.1.1
-anaconda-project @ file:///tmp/build/80754af9/anaconda-project_1637161053845/work
-anyio @ file:///C:/ci/anyio_1644481921011/work/dist
-appdirs==1.4.4
-argh==0.26.2
-argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
-argon2-cffi-bindings @ file:///C:/ci/argon2-cffi-bindings_1644551690056/work
-arrow @ file:///opt/conda/conda-bld/arrow_1649166651673/work
-asn1crypto @ file:///C:/ci/asn1crypto_1652326049747/work
-astroid @ file:///C:/ci/astroid_1628063282661/work
-astropy @ file:///C:/ci/astropy_1629829318700/work
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
-astunparse==1.6.3
-async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-atomicwrites==1.4.0
-attrs @ file:///opt/conda/conda-bld/attrs_1642510447205/work
-autopep8 @ file:///opt/conda/conda-bld/autopep8_1639166893812/work
-Babel @ file:///tmp/build/80754af9/babel_1620871417480/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-backports.functools-lru-cache @ file:///tmp/build/80754af9/backports.functools_lru_cache_1618170165463/work
-backports.shutil-get-terminal-size @ file:///tmp/build/80754af9/backports.shutil_get_terminal_size_1608222128777/work
-backports.tempfile @ file:///home/linux1/recipes/ci/backports.tempfile_1610991236607/work
-backports.weakref==1.0.post1
-bcrypt @ file:///C:/ci/bcrypt_1607022693089/work
-beautifulsoup4 @ file:///C:/ci/beautifulsoup4_1650293025093/work
-binaryornot @ file:///tmp/build/80754af9/binaryornot_1617751525010/work
-bitarray @ file:///C:/ci/bitarray_1657729621682/work
-bkcharts==0.2
-black==21.12b0
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
-bokeh @ file:///C:/ci/bokeh_1635306491714/work
-boto==2.49.0
-Bottleneck @ file:///C:/ci/bottleneck_1607557040328/work
-brotlipy==0.7.0
-cached-property @ file:///tmp/build/80754af9/cached-property_1600785575025/work
-cachetools==5.0.0
-certifi @ file:///C:/Windows/TEMP/abs_e9b7158a-aa56-4a5b-87b6-c00d295b01fanefpc8_o/croots/recipe/certifi_1655968940823/work/certifi
-cffi @ file:///C:/ci_310/cffi_1642682485096/work
-cfgv==3.3.1
-chardet @ file:///C:/ci/chardet_1607706937985/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-click @ file:///C:/ci/click_1646038595831/work
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1632508026186/work
-clyent==1.2.2
-colorama @ file:///C:/Windows/TEMP/abs_9439aeb1-0254-449a-96f7-33ab5eb17fc8apleb4yn/croots/recipe/colorama_1657009099097/work
-comtypes==1.1.10
-conda==4.13.0
-conda-build==3.21.6
-conda-content-trust @ file:///C:/Windows/TEMP/abs_4589313d-fc62-4ccc-81c0-b801b4449e833j1ajrwu/croots/recipe/conda-content-trust_1658126379362/work
-conda-pack @ file:///tmp/build/80754af9/conda-pack_1611163042455/work
-conda-package-handling @ file:///C:/ci/conda-package-handling_1649106011304/work
-conda-repo-cli @ file:///tmp/build/80754af9/conda-repo-cli_1620168426516/work
-conda-token @ file:///tmp/build/80754af9/conda-token_1620076980546/work
-conda-verify==3.4.2
-contextlib2 @ file:///Users/ktietz/demo/mc3/conda-bld/contextlib2_1630668244042/work
-cookiecutter @ file:///opt/conda/conda-bld/cookiecutter_1649151442564/work
-cryptography @ file:///C:/ci/cryptography_1652083563162/work
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
-Cython @ file:///C:/Windows/Temp/abs_b300180f-81e0-420a-bc9f-b92686316cc6ycbce4mc/croots/recipe/cython_1656941954241/work
-cytoolz==0.11.0
-daal4py==2021.3.0
-dask==2021.10.0
-databricks-cli==0.16.8
-debugpy @ file:///C:/ci/debugpy_1637091961445/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-dictset==0.3.1.2
-diff-match-patch @ file:///Users/ktietz/demo/mc3/conda-bld/diff-match-patch_1630511840874/work
-distlib==0.3.4
-distributed @ file:///C:/ci/distributed_1635968318313/work
-docker==5.0.3
-docutils @ file:///C:/Windows/TEMP/abs_24e5e278-4d1c-47eb-97b9-f761d871f482dy2vg450/croots/recipe/docutils_1657175444608/work
-entrypoints @ file:///C:/ci/entrypoints_1649926621128/work
-et-xmlfile==1.1.0
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
-fastcache @ file:///C:/ci/fastcache_1607571310570/work
-fastjsonschema @ file:///tmp/build/80754af9/python-fastjsonschema_1620414857593/work/dist
-filelock @ file:///opt/conda/conda-bld/filelock_1647002191454/work
-flake8 @ file:///tmp/build/80754af9/flake8_1620776156532/work
-Flask @ file:///home/ktietz/src/ci/flask_1611932660458/work
-flatbuffers==1.12
-fonttools==4.25.0
-fsspec @ file:///C:/ci/fsspec_1652802703813/work
-future @ file:///C:/ci/future_1607568713721/work
-gast==0.4.0
-gensim==4.2.0
-gevent @ file:///C:/ci/gevent_1628273776273/work
-gitdb==4.0.9
-GitPython==3.1.27
-glob2 @ file:///home/linux1/recipes/ci/glob2_1610991677669/work
-google-auth==2.6.2
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-greenlet @ file:///C:/ci/greenlet_1628888275363/work
-grpcio==1.44.0
-gunicorn==20.1.0
-h5py @ file:///C:/ci/h5py_1622088609188/work
-HeapDict @ file:///Users/ktietz/demo/mc3/conda-bld/heapdict_1630598515714/work
-html5lib @ file:///Users/ktietz/demo/mc3/conda-bld/html5lib_1629144453894/work
-huggingface-hub==0.7.0
-identify==2.5.1
-idna @ file:///tmp/build/80754af9/idna_1637925883363/work
-imagecodecs @ file:///C:/ci/imagecodecs_1635511087451/work
-imageio @ file:///tmp/build/80754af9/imageio_1617700267927/work
-imagesize @ file:///C:/Windows/TEMP/abs_3cecd249-3fc4-4bfc-b80b-bb227b0d701en12vqzot/croots/recipe/imagesize_1657179501304/work
-imbalanced-learn==0.9.1
-importlib-metadata @ file:///C:/ci/importlib-metadata_1648562621412/work
-inflection==0.5.1
-iniconfig @ file:///home/linux1/recipes/ci/iniconfig_1610983019677/work
-intervaltree @ file:///Users/ktietz/demo/mc3/conda-bld/intervaltree_1630511889664/work
-ipykernel @ file:///C:/ci/ipykernel_1646982785443/work/dist/ipykernel-6.9.1-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1657634415474/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1634143127070/work
-isort @ file:///tmp/build/80754af9/isort_1628603791788/work
-itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
-jdcal @ file:///Users/ktietz/demo/mc3/conda-bld/jdcal_1630584345063/work
-jedi @ file:///C:/ci/jedi_1644315428289/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1612213139570/work
-jinja2-time @ file:///opt/conda/conda-bld/jinja2-time_1649251842261/work
-joblib @ file:///tmp/build/80754af9/joblib_1635411271373/work
-json5 @ file:///tmp/build/80754af9/json5_1624432770122/work
-jsonschema @ file:///C:/ci/jsonschema_1650008058050/work
-jupyter @ file:///C:/ci/jupyter_1607685287094/work
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
-jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1616615302928/work
-jupyter-core @ file:///C:/ci/jupyter_core_1651656286743/work
-jupyter-server @ file:///C:/Windows/TEMP/abs_af34539e-be0f-4767-94fb-39ff75b173480cys6cki/croots/recipe/jupyter_server_1654784029941/work
-jupyterlab @ file:///opt/conda/conda-bld/jupyterlab_1647445413472/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-server @ file:///opt/conda/conda-bld/jupyterlab_server_1644500396812/work
-jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
-keras==2.9.0
-Keras-Preprocessing==1.1.2
-keyring @ file:///C:/ci/keyring_1638531673471/work
-kiwisolver @ file:///C:/ci/kiwisolver_1653292407425/work
-lazy-object-proxy @ file:///C:/ci/lazy-object-proxy_1616529288960/work
-libarchive-c @ file:///tmp/build/80754af9/python-libarchive-c_1617780486945/work
-libclang==13.0.0
-lightgbm==3.3.2
-lime==0.1.1.36
-llvmlite==0.36.0
-locket @ file:///C:/ci/locket_1652904031364/work
-lxml @ file:///C:/ci/lxml_1657527445690/work
-Mako==1.2.0
-Markdown==3.3.6
-MarkupSafe @ file:///C:/ci/markupsafe_1621528502553/work
-matplotlib==3.5.2
-matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
-mccabe==0.6.1
-menuinst @ file:///C:/ci/menuinst_1631733438520/work
-mglearn==0.1.9
-missingno==0.5.0
-mistune @ file:///C:/ci/mistune_1607359457024/work
-mkl-fft==1.3.1
-mkl-random @ file:///C:/ci/mkl_random_1626186184308/work
-mkl-service==2.4.0
-mlflow==1.26.1
-mock @ file:///tmp/build/80754af9/mock_1607622725907/work
-more-itertools @ file:///tmp/build/80754af9/more-itertools_1637733554872/work
-mpmath==1.2.1
-msgpack @ file:///C:/ci/msgpack-python_1652329316214/work
-multipledispatch @ file:///C:/ci/multipledispatch_1607574329826/work
-munkres==1.1.4
-mypy-extensions==0.4.3
-navigator-updater==0.2.1
-nbclassic @ file:///opt/conda/conda-bld/nbclassic_1644943264176/work
-nbclient @ file:///C:/ci/nbclient_1650290387259/work
-nbconvert @ file:///C:/ci/nbconvert_1649741016669/work
-nbformat @ file:///C:/ci/nbformat_1649845125000/work
-nbpep8==0.0.15
-nest-asyncio @ file:///C:/ci/nest-asyncio_1649829929390/work
-networkx @ file:///C:/ci/networkx_1657716998256/work
-nltk @ file:///opt/conda/conda-bld/nltk_1645628263994/work
-nodeenv==1.7.0
-nose @ file:///opt/conda/conda-bld/nose_1642704612149/work
-notebook @ file:///C:/ci/notebook_1651666819623/work
-numba==0.53.0
-numexpr @ file:///C:/ci/numexpr_1618856728739/work
-numpy==1.22.4
-numpydoc @ file:///C:/Windows/TEMP/abs_30799058-86dd-4401-b621-d172137a4d87_ra3twm7/croots/recipe/numpydoc_1657529873713/work
-oauthlib==3.2.0
-olefile @ file:///Users/ktietz/demo/mc3/conda-bld/olefile_1629805411829/work
-opencv-python==4.5.5.64
-openpyxl==3.0.10
-opt-einsum==3.3.0
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
-pandas @ file:///C:/ci/pandas_1635506685681/work
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-paramiko @ file:///opt/conda/conda-bld/paramiko_1640109032755/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-partd @ file:///opt/conda/conda-bld/partd_1647245470509/work
-path @ file:///opt/conda/conda-bld/path_1641578212155/work
-pathlib2 @ file:///C:/ci/pathlib2_1625585796814/work
-pathspec==0.9.0
-patsy==0.5.2
-pep8==1.7.1
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow==9.2.0
-pkginfo @ file:///tmp/build/80754af9/pkginfo_1643162084911/work
-platformdirs==2.5.2
-pluggy @ file:///C:/ci/pluggy_1648024580010/work
-ply==3.11
-poyo @ file:///tmp/build/80754af9/poyo_1617751526755/work
-pre-commit==2.19.0
-pretty-confusion-matrix==0.1.1
-prometheus-client @ file:///opt/conda/conda-bld/prometheus_client_1643788673601/work
-prometheus-flask-exporter==0.20.2
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
-protobuf==3.19.4
-psutil @ file:///C:/Windows/Temp/abs_b2c2fd7f-9fd5-4756-95ea-8aed74d0039flsd9qufz/croots/recipe/psutil_1656431277748/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-py @ file:///opt/conda/conda-bld/py_1644396412707/work
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle @ file:///tmp/build/80754af9/pycodestyle_1615748559966/work
-pycodestyle_magic==0.5
-pycosat==0.6.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pycurl==7.45.1
-pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1621600989141/work
-pyerfa @ file:///C:/ci/pyerfa_1621560974055/work
-pyflakes @ file:///tmp/build/80754af9/pyflakes_1617200973297/work
-Pygments @ file:///opt/conda/conda-bld/pygments_1644249106324/work
-PyJWT @ file:///C:/ci/pyjwt_1657511236979/work
-pylint @ file:///C:/ci/pylint_1627536884966/work
-pyls-spyder==0.4.0
-PyNaCl @ file:///C:/ci/pynacl_1607612759007/work
-pyodbc @ file:///C:/ci/pyodbc_1647426110990/work
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
-pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
-pyreadline==2.1
-pyrsistent @ file:///C:/ci/pyrsistent_1636093225342/work
-PySocks @ file:///C:/ci/pysocks_1605307512533/work
-pystaggrelite3==0.1.3
-pytest==7.1.2
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-python-lsp-black @ file:///tmp/build/80754af9/python-lsp-black_1634232156041/work
-python-lsp-jsonrpc==1.0.0
-python-lsp-server==1.2.4
-python-slugify @ file:///tmp/build/80754af9/python-slugify_1620405669636/work
-pytz @ file:///C:/Windows/TEMP/abs_90eacd4e-8eff-491e-b26e-f707eba2cbe1ujvbhqz1/croots/recipe/pytz_1654762631027/work
-pyvttbl==0.5.2.2
-PyWavelets @ file:///C:/ci/pywavelets_1607645631519/work
-pywin32==302
-pywin32-ctypes @ file:///C:/ci/pywin32-ctypes_1607553594546/work
-pywinpty @ file:///C:/ci_310/pywinpty_1644230983541/work/target/wheels/pywinpty-2.0.2-cp39-none-win_amd64.whl
-PyYAML==6.0
-pyzmq @ file:///C:/ci/pyzmq_1657615952984/work
-QDarkStyle @ file:///tmp/build/80754af9/qdarkstyle_1617386714626/work
-qstylizer @ file:///tmp/build/80754af9/qstylizer_1617713584600/work/dist/qstylizer-0.1.10-py2.py3-none-any.whl
-QtAwesome @ file:///tmp/build/80754af9/qtawesome_1637160816833/work
-qtconsole @ file:///C:/ci/qtconsole_1657527102797/work
-QtPy @ file:///opt/conda/conda-bld/qtpy_1649073884068/work
-querystring-parser==1.2.4
-regex @ file:///C:/ci/regex_1648447888413/work
-requests @ file:///C:/ci/requests_1657735342357/work
-requests-oauthlib==1.3.1
-rope @ file:///opt/conda/conda-bld/rope_1643788605236/work
-rsa==4.8
-Rtree @ file:///C:/ci/rtree_1618421015405/work
-ruamel-yaml-conda @ file:///C:/ci/ruamel_yaml_1616016898638/work
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.6
-scikit-image==0.18.3
-scikit-learn==1.1.1
-scikit-learn-intelex==2021.20210714.120553
-scipy @ file:///C:/ci/scipy_1630606917240/work
-seaborn @ file:///tmp/build/80754af9/seaborn_1629307859561/work
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
-shap==0.41.0
-simplegeneric==0.8.1
-singledispatch @ file:///tmp/build/80754af9/singledispatch_1629321204894/work
-sip==4.19.13
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-sklearn==0.0
-slicer==0.0.7
-smart-open==6.0.0
-smmap==5.0.0
-sniffio @ file:///C:/ci/sniffio_1614030527509/work
-snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1637937080595/work
-sortedcollections @ file:///tmp/build/80754af9/sortedcollections_1611172717284/work
-sortedcontainers @ file:///tmp/build/80754af9/sortedcontainers_1623949099177/work
-soupsieve @ file:///tmp/build/80754af9/soupsieve_1636706018808/work
-Sphinx @ file:///C:/ci/sphinx_1657617205740/work
-sphinxcontrib-applehelp @ file:///home/ktietz/src/ci/sphinxcontrib-applehelp_1611920841464/work
-sphinxcontrib-devhelp @ file:///home/ktietz/src/ci/sphinxcontrib-devhelp_1611920923094/work
-sphinxcontrib-htmlhelp @ file:///tmp/build/80754af9/sphinxcontrib-htmlhelp_1623945626792/work
-sphinxcontrib-jsmath @ file:///home/ktietz/src/ci/sphinxcontrib-jsmath_1611920942228/work
-sphinxcontrib-qthelp @ file:///home/ktietz/src/ci/sphinxcontrib-qthelp_1611921055322/work
-sphinxcontrib-serializinghtml @ file:///tmp/build/80754af9/sphinxcontrib-serializinghtml_1624451540180/work
-sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1597081412696/work
-spyder @ file:///C:/ci/spyder_1636480369575/work
-spyder-kernels @ file:///C:/ci/spyder-kernels_1634237096710/work
-SQLAlchemy @ file:///C:/Windows/Temp/abs_f8661157-660b-49bb-a790-69ab9f3b8f7c8a8s2psb/croots/recipe/sqlalchemy_1657867864564/work
-sqlparse==0.4.2
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
-statsmodels==0.12.2
-sympy @ file:///C:/ci/sympy_1647853873858/work
-tables==3.6.1
-tabulate==0.8.9
-TBB==0.2
-tblib @ file:///Users/ktietz/demo/mc3/conda-bld/tblib_1629402031467/work
-tensorboard==2.9.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.9.1
-tensorflow-estimator==2.9.0
-tensorflow-hub==0.12.0
-tensorflow-io-gcs-filesystem==0.24.0
-tensorflow-text==2.9.0
-termcolor==1.1.0
-terminado @ file:///C:/ci/terminado_1644322780199/work
-testpath @ file:///C:/Windows/TEMP/abs_23c7fa33-cbb9-46dc-b7c5-590c38e2de3d4bmbngal/croots/recipe/testpath_1655908553202/work
-text-unidecode @ file:///Users/ktietz/demo/mc3/conda-bld/text-unidecode_1629401354553/work
-textdistance @ file:///tmp/build/80754af9/textdistance_1612461398012/work
-tf-estimator-nightly==2.8.0.dev2021122109
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
-three-merge @ file:///tmp/build/80754af9/three-merge_1607553261110/work
-tifffile @ file:///tmp/build/80754af9/tifffile_1627275862826/work
-tinycss @ file:///tmp/build/80754af9/tinycss_1617713798712/work
-tokenizers==0.12.1
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-tomli @ file:///C:/Windows/TEMP/abs_ac109f85-a7b3-4b4d-bcfd-52622eceddf0hy332ojo/croots/recipe/tomli_1657175513137/work
-toolz @ file:///tmp/build/80754af9/toolz_1636545406491/work
-tornado @ file:///C:/ci/tornado_1606924294691/work
-tqdm @ file:///C:/ci/tqdm_1650636210717/work
-traitlets @ file:///tmp/build/80754af9/traitlets_1636710298902/work
-transformers==4.19.2
-typed-ast @ file:///C:/ci/typed-ast_1624953797214/work
-typing_extensions @ file:///opt/conda/conda-bld/typing_extensions_1647553014482/work
-ujson @ file:///C:/ci/ujson_1657525944442/work
-unicodecsv==0.14.1
-Unidecode @ file:///tmp/build/80754af9/unidecode_1614712377438/work
-urllib3 @ file:///C:/ci/urllib3_1650639883891/work
-virtualenv==20.15.1
-waitress==2.1.2
-watchdog @ file:///C:/ci/watchdog_1638367441841/work
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-webencodings==0.5.1
-websocket-client==1.3.2
-Werkzeug @ file:///opt/conda/conda-bld/werkzeug_1645628268370/work
-whichcraft @ file:///tmp/build/80754af9/whichcraft_1617751293875/work
-widgetsnbextension @ file:///C:/ci/widgetsnbextension_1644991377168/work
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306162074/work
-win-unicode-console==0.5
-wincertstore==0.2
-wordcloud @ file:///D:/bld/wordcloud_1637007576973/work
-wrapt @ file:///C:/ci/wrapt_1607574570428/work
-xgboost==1.6.1
-xlrd @ file:///tmp/build/80754af9/xlrd_1608072521494/work
-XlsxWriter @ file:///opt/conda/conda-bld/xlsxwriter_1649073856329/work
-xlwings==0.24.9
-xlwt==1.3.0
-xmltodict @ file:///Users/ktietz/demo/mc3/conda-bld/xmltodict_1629301980723/work
-yapf @ file:///tmp/build/80754af9/yapf_1615749224965/work
-yellowbrick @ file:///home/conda/feedstock_root/build_artifacts/yellowbrick_1648158830533/work
-zict==2.1.0
-zipp @ file:///C:/ci/zipp_1652273994994/work
-zope.event==4.5.0
-zope.interface @ file:///C:/ci/zope.interface_1625036252485/work
+click==8.1.3
+colorama==0.4.5
+Flask==2.1.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+Werkzeug==2.1.2
