--- a/Streamlit/requirements.txt
+++ b/Streamlit/requirements.txt
@@ -2,7 +2,7 @@ gunicorn==19.0.0
 joblib==1.1.0
 pandas==1.3.4
 streamlit==1.11.0
-request==2.28.1
+requests==2.28.1
 plotly==5.90
 streamlit_shap==1.0.2
 shap==0.41.0
